1.18-5.0.4:
- Fixed a fluid dupe bug

1.18-5.0.3:
- Fixed a bug with the node gui. It was not possible to fill in the channel and filling the node actually changed the channel

1.18-5.0.2:
- Port to 1.18.2

1.18-5.0.1:
- Fixed a problem with items not getting restored when breaking and placing blocks

1.18-5.0.0:
- First port to 1.18

1.16-4.0.14:
- Updated to latest version of McJtyLib

1.16-4.0.13:
- Updated to latest version of McJtyLib

1.16-4.0.12:
- Updated to latest version of McJtyLib
- The hud for the Processor is full bright again making it easier to read

1.16-4.0.11:
- Fixed programmer card tooltip
- Fixed a problem with the node and processor not doing redstone output correctly

1.16-4.0.10:
- Fixed integration between RFTools Control and RFTools Storage for the screen modules

1.16-4.0.9:
- Fixed a problem with the storage control module which wouldn't fit in the processor anymore

1.16-4.0.8:
- It is again possible to drag items into programmer item slots

1.16-4.0.7:
- Update for McJtyLib tooltip rendering

1.16-4.0.6:
- Popup errors in gui's now fit their text better
- Clipboard support in the programmer is working again

1.16-4.0.5:
- Fixed a bug in the crafting station
- Update to latest McJtyLib

1.16-4.0.4-beta:
- Update to latest McJtyLib

4.0.3-beta:
- Fixed a problem on servers

4.0.2-beta:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes
- Fixed a problem with spawner configuration loading on servers

4.0.1-beta:
- Fixed a potential exploit which could be used to attack a server

4.0.0-beta:
- First port to 1.16.2

3.0.5:
- Fixed a potential exploit which could be used to attack a server

3.0.4-beta:
- Update for latest McJtyLib

3.0.3-beta:
- Update for latest McJtyLib

3.0.2-beta:
- Fixed a problem with fetching variables and fluids from a processor through a tablet

3.0.1-beta:
- Dependency fix

3.0.0-beta:
- First port of RFTools Control to 1.15
- Removed all oredictionary related parameters